# facetraining

./: .gitignore  README.md  pyproject.toml
facetraining/: cli.py  utils.py
