[tool.poetry]
name = "facetraining"
version = "0.1.0"
description = "training you"
authors = ["YAMASHITA Yuta <proyuuta0618188188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.7.1,<4.0"
tensorflow = "^2.4.1"
Keras = "^2.4.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
poethepoet = "^0.9.0"

[tool.poetry.scripts]
facetraining = "facetraining.cli:cli"

[tool.poe.tasks]
lint = "flake8 facetraining"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
